# WaterBeats

./: .coverage  .gitignore  LICENSE  README.md  mac commands.txt  requirements.txt  requirements_old.txt  start_faust.bat  start_faust.sh  start_kafka.bat  windows commands.txt
AuthGateway/: .env.example  Dockerfile  README.md  package-lock.json  package.json
BaseStation/: README.md  requirements.txt  start_faust.bat  start_kafka.sh
DataBackend/: Cargo.toml  DataBackendInit.Dockerfile  Dockerfile  README.md
DataBackend/scripts/: influxdb.sh
DataBackend/src/: data.rs  main.rs  model.rs
DataBuffer/: README.md  api.py  data_buffer.py  requirements.txt  service.py  test_data_buffer.py
DataManagement/: .env.example  Dockerfile  README.md  api.py  create_token.py  data_management.py  docker-compose.yml  requirements.txt  test_data_management.py
DockerImages/: docker-compose.yml  postgres_database_schema.sql  rules_database_schema.sql
Edge-data-processor/: edge-data-processor.py  requirements.txt  test_edge_data_processor.py
Edge_data_processor/: api.py  data_buffer_connection.py  edge_data_processor.py  requirements.txt  test_edge_data_processor.py
Faust/: bs_hub.py  config_supplier.py  hello_world.py  page_views.py  sensor_handler.py  speed_processor.py  windows commands.txt
InstructionDispatcher/: .env.example  Dockerfile  README.md  package-lock.json  package.json
IoTActuator/: actuator.py  main.py  pump.py  serverTest.py  sprinkler.py
IoTBaseStation/: client.py  manage.py  requirements.txt
IoTSimulator/: actuator.py  main.py  requirements.txt  (+2 more)
(+225 files in other folders)
