[package]
edition = "2021"
name = "data_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
chrono = "0.4.23"
futures = {version = "0.3.26"}
influxdb2 = "0.3"
influxdb2-structmap = "0.2" # required by influxdb2
env_logger = "0.10.0"
num-traits = "0.2" # required by influxdb2
serde = {version = "1.0", features = ["derive"]}
tide = "0.16.0"
